# erl_gp_sdf

./: .clang-format  .clangd  CHANGELOG.md  CMakeLists.txt  Pipfile  README.md  compute_var.py  entry_points.txt  entry_points.txt.in  erl_gp_sdf.repos  package.xml  pyproject.toml  requirements.txt  sdf_errors_gp_vs_softmin.csv  sdf_errors_gp_vs_softmin_with_noise.csv  setup.py
app/: process_keti_data.cpp
backup/src/: sign_gp.cpp
cmake/: erl_gp_sdfConfig.cmake.in  erl_gp_sdf_dependencies.cmake  erl_sdf_mappingConfig.cmake.in
config/: bayesian_hilbert_mapping_2d_double.yaml  bayesian_hilbert_mapping_2d_float.yaml  bayesian_hilbert_mapping_3d_double.yaml  bayesian_hilbert_mapping_3d_float.yaml  bayesian_hilbert_mapping_gazebo_2d_float.yaml  demo_log_sdf_regression.yaml  demo_sdf_regression.yaml  demo_variance_estimation.yaml  depth_camera.yaml  gp_occ_mapping_2d_double.yaml  gp_occ_mapping_2d_float.yaml  gp_occ_mapping_3d_lidar_double.yaml  gp_occ_mapping_3d_lidar_float.yaml  gp_occ_mapping_gazebo_2d_double.yaml  gp_occ_mapping_gazebo_2d_float.yaml  gp_occ_mapping_replica_lidar_360_double.yaml  gp_occ_mapping_replica_lidar_360_float.yaml  gp_occ_mapping_ucsd_fah_2d_double.yaml  gp_occ_mapping_ucsd_fah_2d_float.yaml  lidar_3d_271.yaml  lidar_3d_360.yaml  sdf_mapping.yaml  sdf_mapping_2d.yaml  sdf_mapping_3d_depth.yaml  sdf_mapping_3d_lidar.yaml  sdf_mapping_3d_lidar_360.yaml  sdf_mapping_3d_lidar_double.yaml  sdf_mapping_cow_and_lady.yaml  sdf_mapping_cow_and_lady_double.yaml  sdf_mapping_cow_and_lady_float.yaml  sdf_mapping_gazebo_2d.yaml  sdf_mapping_gazebo_2d_double.yaml  sdf_mapping_gazebo_2d_float.yaml  sdf_mapping_gazebo_2d_reduced_rank.yaml  sdf_mapping_house_expo_lidar_2d.yaml  sdf_mapping_jackal_3d_lidar_float.yaml  sdf_mapping_replica_depth.yaml  sdf_mapping_replica_depth_double.yaml  sdf_mapping_replica_depth_float.yaml  sdf_mapping_replica_lidar.yaml  (+12 more)
config/cow_and_lady/: bayesian_hilbert_mapping_cow_and_lady_float.yaml  bayesian_hilbert_sdf_mapping_float.yaml  bayesian_hilbert_surf_mapping_float.yaml  depth_frame.yaml  gp_occ_mapping_cow_and_lady_float.yaml  gp_occ_sdf_mapping_double.yaml  gp_occ_sdf_mapping_float.yaml  gp_occ_surf_mapping_float.yaml  open3d_view_status.json  open3d_view_status2.json
config/demo/: demo_gp_occ_regression.yaml  demo_log_sdf_regression.yaml  demo_sdf_regression.yaml  demo_variance_estimation.yaml
config/gazebo/: bayesian_hilbert_mapping_gazebo_2d_float.yaml  bayesian_hilbert_sdf_mapping_float.yaml  bayesian_hilbert_surf_mapping_float.yaml  gp_occ_mapping_gazebo_2d_float.yaml  gp_occ_sdf_mapping_double.yaml  gp_occ_sdf_mapping_float.yaml  gp_occ_sdf_mapping_gazebo_2d_float.yaml  gp_occ_surf_mapping_double.yaml
config/house_expo_2d/: gp_occ_sdf_mapping_house_expo_2d.yaml
config/jackal/: gp_occ_mapping_jackal_3d_lidar_float.yaml
config/newer_college/: bayesian_hilbert_sdf_mapping_float.yaml  bayesian_hilbert_surf_mapping_float.yaml  bayesian_hilbert_surf_mapping_float_scaled.yaml  gp_occ_sdf_mapping_float.yaml  gp_occ_surf_mapping_float.yaml  grid.yaml  open3d_view_status.json
config/replica/: bayesian_hilbert_mapping_replica_3d_depth_float.yaml  bayesian_hilbert_mapping_replica_3d_lidar_360_float.yaml  bayesian_hilbert_surf_mapping_depth_float.yaml  bayesian_hilbert_surf_mapping_lidar_360_float.yaml  gp_occ_mapping_replica_3d_depth_double.yaml  gp_occ_mapping_replica_3d_depth_float.yaml  gp_occ_mapping_replica_3d_lidar_270_float.yaml  gp_occ_mapping_replica_3d_lidar_360_double.yaml  gp_occ_sdf_mapping_replica_lidar.yaml  (+6 more)
data/: .gitignore  house_expo_room_1451.ply  replica-hotel-0-traj.txt
docs/: BHM-parameter-calculator.xlsx  setup_no_ros.md  setup_ros1.md  setup_ros2.md  usage_no_ros.md  usage_ros1.md
ideas/: gaussian_distance.py  normal_diffusion.py
launch/: cow_and_lady.launch  gazebo_room_2d.launch  gp_sdf_mapping_jackal_2d.launch  gp_sdf_mapping_jackal_3d_lidar.launch  sdf_mapping.launch  test_gp_sdf_mapping.launch  zed_ros_bag.launch  zed_ros_live.launch
msg/: SdfPredict2D.msg
rviz/: zed.rviz
scripts/: draw_bhm.py  draw_mu_sigma.py  mu-2d.txt  record_ros_bag_zed.bash  run_zed_demo.bash  sigma-2d.txt  vi_sigmoid.py
src/: abstract_surface_mapping.cpp  bayesian_hilbert_surface_mapping.cpp  gp_occ_surface_mapping.cpp  gp_occ_surface_mapping_2d.cpp  gp_occ_surface_mapping_3d.cpp  gp_sdf_mapping.cpp  gp_sdf_mapping_2d.cpp  gp_sdf_mapping_3d.cpp  gp_sdf_mapping_setting.cpp  init.cpp  log_edf_gp.cpp  log_sdf_gp.cpp  register.cpp  sdf_gp.cpp  sign_gp.cpp  surface_data_manager.cpp
src/demo/: CMakeLists.txt  demo.cmake  gp_occ_regression.cpp  log_sdf_regression.cpp  sdf_regression.cpp  variance_estimation.cpp
src/ros/: CMakeLists.txt  erl_sdf_mapping_node.cpp
src/ros/ros1/: sdf_mapping_node.cpp  sdf_visualization_node.cpp
srv/: PredictSdf.srv  SdfQuery.srv
test/: CMakeLists.txt  house_expo_room_1451.bt  house_expo_room_1451.ot  rosbag_extract.py  test_gp_occ_surface_mapping_2d.cpp  test_gp_sdf_mapping_2d.cpp  test_gpis_map.cpp  tree.bt  tree.ot  visualize_sdf_mapping.py
test/gpis_map/include/: GPisMap.h  ObsGP.h  OnGpis.h  covFnc.h  params.h  quadtree.h  strct.h
test/gpis_map/src/: GPisMap.cpp  ObsGP.cpp  OnGpis.cpp  covFnc.cpp  quadtree.cpp
test/gtest/: .gitignore  README.md  draw.py  house_expo_room_1451.csv  replica-hotel-0-traj.txt  test_bayesian_hilbert_gp_sdf_mapping_2d.cpp  test_bayesian_hilbert_gp_sdf_mapping_3d.cpp  test_bayesian_hilbert_map_2d.cpp  test_bayesian_hilbert_surface_mapping.cpp  test_gp_occ_gp_sdf_mapping_2d.cpp  test_gp_occ_gp_sdf_mapping_3d.cpp  test_gp_occ_surface_mapping.cpp  test_gp_occ_surface_mapping_2d.cpp  test_gp_occ_surface_mapping_3d.cpp  test_gp_sdf_mapping.cpp  test_gp_sdf_mapping_2d.cpp  test_gp_sdf_mapping_3d.cpp  test_gpis_map.cpp  test_log_gpis_map.cpp  test_log_gpis_map_2d.cpp  test_ornstein_uhlenbeck.cpp  test_sdf_mapping_3d_to_mesh.cpp  utils.hpp
test/pytest/: README.md  bayesian_hilbert_map.py  bayesian_hilbert_map_np.py  debug_bhm.py  draw_bhm.py  extract_data_from_gp_sdf_mapping.py  green_function.py  test_gp_sdf_mapping_2d.py  test_gp_sdf_mapping_3d.py
(+182 files in other folders)
