<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>erl_gp_sdf</name>
    <version>0.2.0</version>
    <description>erl_gp_sdf is a C++ library for SDF estimation.</description>
    <author email="daizhirui@hotmail.com">Zhirui Dai</author>
    <maintainer email="daizhirui@hotmail.com">Zhirui Dai</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/ExistentialRobotics/erl_gp_sdf.git</url>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

    <depend condition="$ROS_VERSION == 1">roscpp</depend>
    <depend condition="$ROS_VERSION == 2">rclcpp</depend>

    <!-- ERL dependencies -->
    <depend>erl_common</depend>
    <depend>erl_covariance</depend>
    <depend>erl_geometry</depend>
    <depend>erl_gaussian_process</depend>

    <!-- Optional, needed to visualize grid_map in rviz -->
    <!-- <exec_depend>grid_map_rviz_plugin</exec_depend> -->

    <test_depend condition="$ROS_VERSION == 1">rosunit</test_depend>
    <test_depend>erl_common</test_depend>
    <test_depend>erl_covariance</test_depend>
    <test_depend>erl_geometry</test_depend>
    <test_depend>erl_gaussian_process</test_depend>

    <export>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>

</package>
