[build-system]
requires = ["setuptools", "wheel", "toml"]

[tool.black]
line-length = 120

[erl]
description = "Python bindings for erl_sdf_mapping"
python_pkg_name = "erl_sdf_mapping"
pybind_module_name = "pyerl_sdf_mapping"
erl_dependencies = ["erl_common", "erl_covariance", "erl_gaussian_process", "erl_geometry"]
build_type = "Release"
version = "0.1.0"
author = "Zhirui Dai"
author_email = "zhdai@ucsd.edu"
entry_points = { console_scripts = ["erl-sdf-mapping-demo=erl_sdf_mapping.main_gp_sdf:main"] }
license = "MIT"
