[build-system]
requires = ["setuptools", "wheel", "toml"]

[tool.black]
line-length = 120

[erl]
erl_dependencies = ["erl_cmake_tools", "erl_common", "erl_covariance", "erl_gaussian_process", "erl_geometry"]
build_type = "Release"

[project]
name = "erl_gp_sdf"
version = "0.2.0"
description = "Python package for erl_gp_sdf"
authors = [
    { name = "Zhirui Dai", email = "zhdai@ucsd.edu" }
]
maintainers = [
    { name = "Zhirui Dai", email = "zhdai@ucsd.edu" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []
